package com.directi.training.lsp.exercise;

public interface IDuck {
    void quack();
    void swim();
}
